# coolToast

./: .editorconfig  .gitignore  CMakeLists.txt  toasts.db
include/: toasts.h  toasts_cli.h
src/: main.cpp  toasts.cpp  toasts_cli.cpp
